--- a/client/src/style/NavBar.module.css
+++ b/client/src/style/NavBar.module.css
@@ -1,4 +1,4 @@
-nav {
+.nav {
 	display: flex;
 	justify-content: space-between;
 	background: #007472;
@@ -6,32 +6,32 @@ nav {
 	color: white;
 }
 
-nav ul {
+.nav ul {
 	display: flex;
 	list-style: none;
 }
 
-nav li {
+.nav li {
 	height: 100%;
 	justify-content: center;
 }
 
-a {
+.nav a {
 	text-decoration: none;
 	color: white;
 }
 
-a:hover {
+.nav a:hover {
 	color: rgba(255, 255, 255, 0.61);
 }
 
-nav a.routes {
+.nav a.routes {
 	text-decoration: none;
 	color: white;
 	padding: 20px;
 }
 
-nav a.routes:hover {
+.nav a.routes:hover {
 	text-decoration: underline;
 }
 
@@ -39,14 +39,14 @@ nav a.routes:hover {
   Extra small devices (phones, 600px and down) 
 */
 @media only screen and (max-width: 600px) {
-	nav {
+	.nav {
 		flex-direction: column;
 	}
-	nav ul {
+	.nav ul {
 		flex-direction: column;
 		padding-top: 0.5rem;
 	}
-	nav li {
+	.nav li {
 		padding: 0.5rem 0;
 	}
 }
