--- a/client/src/style/NavBar.module.css
+++ b/client/src/style/NavBar.module.css
@@ -35,18 +35,9 @@
 	text-decoration: underline;
 }
 
-/* 
-  Extra small devices (phones, 600px and down) 
-*/
-@media only screen and (max-width: 600px) {
+@media only screen and (max-device-width: 600px) {
 	.nav {
 		flex-direction: column;
-	}
-	.nav ul {
-		flex-direction: column;
-		padding-top: 0.5rem;
-	}
-	.nav li {
-		padding: 0.5rem 0;
+		font-size: 60px;
 	}
 }
