--- a/client/src/style/HiLowGame.module.css
+++ b/client/src/style/HiLowGame.module.css
@@ -40,3 +40,21 @@
 .btn:disabled {
 	cursor: not-allowed;
 }
+
+@media only screen and (max-device-width: 600px) {
+	.hi_low_game {
+		font-size: 60px;
+	}
+
+	.hi_low_card {
+		font-size: 200px;
+		width: 400px;
+		height: 600px;
+	}
+	
+	.btn {
+		font-size: 80px;
+		width: 400px;
+		height: auto;
+	}	
+}
