--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -11,11 +11,13 @@
 * {
 	padding: 0;
 	margin: 0;
+	font-family: 'mono45-headline', Arial, sans-serif;
 }
 
 body {
 	margin: 0;
-	font-family: 'mono45-headline', Arial, sans-serif;
+	background: #1B1B1E;
+	color: #DBDBE7;
 	font-weight: 600;
 	font-size: 20px;
 	letter-spacing: 1.5px;
