--- a/client/src/style/DiceGame.module.css
+++ b/client/src/style/DiceGame.module.css
@@ -9,6 +9,21 @@
 	margin: 5px auto;
 }
 
+.dicePicker {
+	display: flex;
+}
+
+.dicePicker > span {
+	display: flex;
+	font-size: 36px;
+	border: 3px solid rgba(255, 255, 255, 0.16);
+	background: #000000a3;
+	border-radius: 10px;
+	width: 80px;
+	justify-content: center;
+	align-items: center;
+}
+
 .btn {
 	font-family: 'mono45-headline', Arial, sans-serif;
 	font-size: 20px;
@@ -22,6 +37,10 @@
 	box-shadow: inset 0 -8px 0 0 #00000090;
 	text-shadow: 0 2px #00000090;
 	transition: 0.2s;
+}
+
+.clicked {
+	background: #0a6b12;
 }
 
 .btn:hover {
