--- a/client/src/style/BetMaker.module.css
+++ b/client/src/style/BetMaker.module.css
@@ -2,8 +2,9 @@
 	border: 1px solid yellow;
 	border-radius: 10px;
 	background: #000000b1;
-	margin: 10px 50px;
+	margin: 10px auto;
 	padding: 10px;
+	width: 680px;
 }
 
 .btn {
