--- a/client/src/components/BetMaker/BetMaker.module.css
+++ b/client/src/components/BetMaker/BetMaker.module.css
@@ -1,5 +1,5 @@
 .container {
-	border: 1px solid yellow;
+	border: 1px solid #F87D09;
 	border-radius: 10px;
 	background: #000000b1;
 	margin: 10px auto;
