--- a/client/src/components/DiceGame/DiceGame.module.css
+++ b/client/src/components/DiceGame/DiceGame.module.css
@@ -2,14 +2,11 @@
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	align-items: center;
 	padding: 20px;
 	background: #222225;
 	border-radius: 10px;
 	margin: 20px;
-}
-
-.container > * {
-	margin: 5px auto;
 }
 
 .dicePicker {
@@ -57,4 +54,22 @@
 
 .btn:disabled {
 	cursor: not-allowed;
+}
+
+@media only screen and (max-device-width: 600px) {
+	.container {
+		font-size: 40px;
+		padding: 20px;
+	}
+
+	.btn {
+		font-size: 60px;
+		width: 300px;
+		margin: 10px;
+	}	
+
+	.dicePicker > span {
+		font-size: 100px;
+		width: 180px;
+	}
 }
