--- a/client/src/pages/Auth/Auth.module.css
+++ b/client/src/pages/Auth/Auth.module.css
@@ -1,8 +1,5 @@
 .container {
-	display: flex;
 	justify-content: center;
-	align-items: center;
-	flex-direction: column;
 }
 
 input {
@@ -10,18 +7,14 @@ input {
 	font-weight: 600;
 }
 
-.container h2 {
-	text-align: center;
-}
-
 .container > form {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .container > form > button {
-	width: 100px;
-	margin: auto;
+	width: auto;
 	font-size: 20px;
 	padding: 10px;
 }
@@ -36,9 +29,24 @@ input {
 .container a {
 	color: #bb0f0f;
 	text-decoration: none;
-	margin: auto;
 }
 
 .container a:hover {
 	color: rgba(255, 255, 255, 0.616);
+}
+
+@media only screen and (max-device-width: 600px) {
+	.container {
+		font-size: 50px;
+	}
+
+	.container input {
+		width: 100%;
+		height: 50px;
+		font-size: 40px;
+	}
+
+	.container > form > button {
+		font-size: 60px;
+	}
 }
