--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -25,9 +25,56 @@ body {
 
 .main-container {
 	display: flex;
-	height: calc(100vh - 50px);
+	height: calc(100vh - 60px);
 }
 
 .content {
-	flex: 1 0 auto;
+	width: 100%;
+}
+
+/* containers for components */
+.content > * {
+	height: calc(100% - 80px);
+	overflow-y: scroll;
+
+	background: #222225;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 20px;
+	margin: 20px;
+	border-radius: 10px;
+}
+
+.content > * > * {
+	margin: 5px;
+}
+
+.navbar {
+	height: 60px;
+}
+
+.sidebar {
+	width: 80px;
+}
+
+@media only screen and (max-device-width: 600px) {
+	.navbar {
+		height: 150px;
+	}
+
+	.sidebar {
+		width: 100%;
+		height: 200px;
+		bottom: 0;
+	}
+
+	.content {
+		height: calc(100vh - 350px);
+	}
+
+	.main-container {
+		flex-direction: column-reverse;
+		height: calc(100vh - 150px);
+	}
 }
