--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -16,11 +16,15 @@
 
 body {
 	margin: 0;
-	background: #1B1B1E;
-	color: #DBDBE7;
+	background: #1b1b1e;
+	color: #dbdbe7;
 	font-weight: 600;
 	font-size: 20px;
 	letter-spacing: 1.5px;
+}
+
+body::-webkit-scrollbar {
+	display: none;
 }
 
 .main-container {
@@ -30,6 +34,10 @@ body {
 
 .content {
 	width: 100%;
+}
+
+.content > *::-webkit-scrollbar {
+	display: none;
 }
 
 /* containers for components */
