--- a/client/src/components/BetMaker/BetMaker.module.css
+++ b/client/src/components/BetMaker/BetMaker.module.css
@@ -4,7 +4,7 @@
 	background: #000000b1;
 	margin: 10px auto;
 	padding: 10px;
-	width: auto;
+	width: 60%;
 }
 
 .container > * {
@@ -14,13 +14,12 @@
 .btn {
 	font-family: 'mono45-headline', Arial, sans-serif;
 	font-size: 20px;
-	margin: 3px;
 	padding: 10px 5px;
 	background: #47924d;
 	color: wheat;
 	border-radius: 10px;
 	cursor: pointer;
-	width: 160px;
+	width: 25%;
 	height: auto;
 	box-shadow: inset 0 -8px 0 0 #00000090;
 	text-shadow: 0 2px #00000090;
@@ -41,23 +40,16 @@
 }
 
 .little {
-	width: 50px;
+	width: 10%;
 }
 
 @media only screen and (max-device-width: 600px) {
 	.container {
 		font-size: 60px;
-		padding: 20px;
+		width: 90%;
 	}
 
 	.btn {
-		font-size: 50px;
-		width: 160px;
-		margin: 5px;
-		/* height: auto; */
+		font-size: 40px;
 	}	
-	
-	.little {
-		width: 120px;
-	}
 }
