--- a/client/src/components/MinerGame/MinerGame.module.css
+++ b/client/src/components/MinerGame/MinerGame.module.css
@@ -8,6 +8,31 @@
 	align-items: center;
 }
 
+.field {
+	display: flex;
+	flex-direction: column;
+	width: 60%;
+	height: 100%;
+
+}
+
+.row {
+	display: flex;
+	height: 20%;
+
+}
+
+.cell {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 20%;
+	border: 1px solid white;
+	border-radius: 10px;
+	background: #F87D09;
+	cursor: pointer;
+}
+
 @media only screen and (max-device-width: 600px) {
 	.container {
 		font-size: 40px;
