--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -11,11 +11,11 @@
 * {
 	padding: 0;
 	margin: 0;
+	box-sizing: border-box;
 	font-family: 'mono45-headline', Arial, sans-serif;
 }
 
 body {
-	margin: 0;
 	background: #1b1b1e;
 	color: #dbdbe7;
 	font-weight: 600;
@@ -23,13 +23,9 @@ body {
 	letter-spacing: 1.5px;
 }
 
-body::-webkit-scrollbar {
-	display: none;
-}
-
 .main-container {
 	display: flex;
-	height: calc(100vh - 60px);
+	height: calc(100vh - 70px);
 }
 
 .content {
@@ -42,7 +38,7 @@ body::-webkit-scrollbar {
 
 /* containers for components */
 .content > * {
-	height: calc(100% - 80px);
+	height: calc(100% - 40px);
 	overflow-y: scroll;
 
 	background: #222225;
@@ -73,16 +69,10 @@ body::-webkit-scrollbar {
 
 	.sidebar {
 		width: 100%;
-		height: 200px;
-		bottom: 0;
-	}
-
-	.content {
-		height: calc(100vh - 350px);
+		height: 100px;
 	}
 
 	.main-container {
-		flex-direction: column-reverse;
-		height: calc(100vh - 150px);
+		flex-direction: column;
 	}
 }
