--- a/client/src/components/MinerGame/MinerGame.module.css
+++ b/client/src/components/MinerGame/MinerGame.module.css
@@ -11,31 +11,120 @@
 .field {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	width: 60%;
 	height: 100%;
-
 }
 
 .row {
 	display: flex;
 	height: 20%;
-
 }
 
 .cell {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 20%;
-	border: 1px solid white;
+	width: 80px;
+	height: 80px;
+	border: 3px solid #e8a566;
 	border-radius: 10px;
-	background: #F87D09;
+	background: #f87d09;
 	cursor: pointer;
+	transition: 0.2s;
+	margin: 3px;
+}
+
+.cell:disabled {
+	cursor: not-allowed;
+}
+
+.picked {
+	background-size: cover;
+	background-image: url(./img/money.jpg);
+}
+
+.bomb {
+	background: #ffffff;
+	background-size: cover;
+	background-image: url(./img/bomb.png);
+}
+
+.was_picked {
+	background-size: cover;
+	background-image: url(./img/money.jpg);
+	opacity: 0.3;
+}
+
+.bombsPicker {
+	display: flex;
+}
+
+.bombsPicker > div {
+	margin: 0 10px;
+	width: 200px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 25px;
+}
+
+.inp {
+	background: transparent;
+	color: #ffffff;
+	font-size: 20px;
+	border: 0px;
+	width: 40px;
+	cursor: pointer;
+}
+
+.btn {
+	font-family: 'mono45-headline', Arial, sans-serif;
+	font-size: 20px;
+	padding: 10px 5px;
+	background: #47924d;
+	color: wheat;
+	border-radius: 10px;
+	cursor: pointer;
+	width: 30%;
+	height: auto;
+	box-shadow: inset 0 -8px 0 0 #00000090;
+	text-shadow: 0 2px #00000090;
+	transition: 0.2s;
+}
+
+.btn:hover {
+	box-shadow: inset 0 -6px 0 0 #00000090;
+}
+
+.btn:active {
+	box-shadow: inset 0 -1px 0 0 #00000090;
+	text-shadow: 0 0px;
+}
+
+.btn:disabled {
+	cursor: not-allowed;
 }
 
 @media only screen and (max-device-width: 600px) {
 	.container {
 		font-size: 40px;
 	}
-	
+
+	.cell {
+		width: 150px;
+		height: 150px;
+	}
+
+	.bombsPicker > div {
+		width: 400px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 60px;
+	}
+
+	.btn {
+		font-size: 40px;
+	}
 }
