--- a/client/src/components/Sidebar/Sidebar.module.css
+++ b/client/src/components/Sidebar/Sidebar.module.css
@@ -6,6 +6,12 @@
 	height: 100%;
 }
 
+.container > a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .container > a > div {
 	width: 80px;
 	height: 80px;
@@ -17,6 +23,7 @@
 
 .container > a > div > img {
 	width: 60%;
+	height: 60%;
 }
 
 .container > a:hover {
@@ -32,7 +39,13 @@
 		flex-direction: row;
 	}
 
-	.container > * {
+	.container > a {
 		width: 33.33%;
+		border: 1px solid green;
+	}
+
+	.container > a > div > img {
+		width: 100%;
+		height: 100%;
 	}
 }
