--- a/client/src/pages/Ranks/Ranks.module.css
+++ b/client/src/pages/Ranks/Ranks.module.css
@@ -1,10 +1,9 @@
 .container {
-	width: calc(100% - 10px);
 	text-align: center;
 }
 
 .tbl {
-	width: calc(100% - 40px);
+	width: 70%;
 	margin: 20px;
 	border-collapse: separate;
 	border-radius: 10px;
@@ -25,26 +24,20 @@
 	width: 50px;
 	border-radius: 50%;
 	padding: 0;
+	margin: 0 5px;
 	border: 2px solid white;
-}
-
-.link {
-	margin-right: 5px;
-	padding: 0;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 50%;
-}
-
-.player {
-	display: flex;
-	align-items: center;
-	justify-content: center;
 }
 
 @media only screen and (max-device-width: 600px) {
 	.container {
-		font-size: 30px;
+		font-size: 45px;
+	}
+
+	.tbl {
+		width: 100%;
+	}
+
+	.img {
+		width: 150px;
 	}
 }
