--- a/client/src/components/Promocode/Promocode.module.css
+++ b/client/src/components/Promocode/Promocode.module.css
@@ -1,7 +1,12 @@
 .container {
-	border: 1px solid yellow;
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 
+.container > * {
+	margin: 10px;
 }
 
 .inp {
