--- a/client/src/style/index.css
+++ b/client/src/style/index.css
@@ -32,7 +32,7 @@ body {
 	width: 100%;
 }
 
-.content > *::-webkit-scrollbar {
+*::-webkit-scrollbar {
 	display: none;
 }
 
@@ -50,8 +50,26 @@ body {
 	border-radius: 10px;
 }
 
+
 .content > * > * {
 	margin: 5px;
+}
+
+.chat {
+	width: 600px;
+}
+
+.chat > * {
+	height: calc(100% - 40px);
+	overflow-y: scroll;
+	background: #222225;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 20px;
+	margin: 20px 0;
+	margin-right: 20px;
+	border-radius: 10px;
 }
 
 .navbar {
