--- a/client/src/components/Profile/Profile.module.css
+++ b/client/src/components/Profile/Profile.module.css
@@ -1,5 +1,6 @@
 .container {
-	font-size: 25px;
+	font-size: 35px;
+	justify-content: center;
 }
 
 .img {
@@ -8,6 +9,20 @@
 	padding: 0;
 	margin: 0 5px;
 	border: 4px solid white;
+}
+
+.username {
+	display: flex;
+}
+
+.inp {
+	width: auto;
+	font-size: 35px;
+	background: #00000000;
+	border: none;
+	border-radius: 10px;
+	color: orange;
+	font-family: 'mono45-headline';
 }
 
 @media only screen and (max-device-width: 600px) {
