fix adaptive style

--- a/client/src/components/AdminPanel/AdminPanel.module.css
+++ b/client/src/components/AdminPanel/AdminPanel.module.css
@@ -19,3 +19,12 @@ thead > tr > td {
 tbody > tr > td {
     text-align: center;
 }
+
+@media only screen and (max-device-width: 600px) {
+	.container > * {
+		font-size: 50px;
+	}
+    .tbl {
+		font-size: 50px;
+    }
+}
