--- a/client/src/components/Chat/Chat.module.css
+++ b/client/src/components/Chat/Chat.module.css
@@ -1,7 +1,3 @@
-.container {
-
-}
-
 .container > * {
     width: 100%;
     border-radius: 10px;
@@ -31,10 +27,27 @@
 
 .inputArea > * {
     font-size: 20px;
+    font-size: 20px;
     resize: none;
     padding: 5px;
     margin-bottom: 5px;
     width: 100%;
     border-radius: 10px;
+}
+
+
+@media only screen and (max-device-width: 600px) {
+    .container {
+		font-size: 50px;
+        width: 100%;
+    }
+
+    .inputArea > * {
+		font-size: 50px;
+	}
+
+    .messagesArea {
+        font-size: 50px;
+    }
 }
 
