--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,11 +1,13 @@
 .card {
-	border: 2px black solid;
-	border-radius: 5px;
+	border: 3px #f87d09c2 solid;
+	border-radius: 10px;
 	color: #ffffff;
-	min-width: 60px;
-	min-height: 100px;
+	min-width: 120px;
+	min-height: 180px;
 	font-size: 40px;
 	text-align: center;
+	margin-left: -15px;
+	margin-right: -15px;
 }
 
 @media only screen and (max-device-width: 600px) {
