--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -139,7 +139,8 @@ thead td:last-of-type{
 
 	.main-container {
 		flex-direction: column;
-		align-items: center;
+		align-items: center; 
+		height: calc(100dvh - 3rem);
 	}
 
 	nav > div > * {
