--- a/next/src/app/globals.css
+++ b/next/src/app/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
 	--foreground: #1b1b1e;
 	--background: #dbdbe7;
@@ -14,13 +10,51 @@
 	}
 }
 
+/* *::-webkit-scrollbar {
+	display: none;
+} */
+
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+html,
+body {
+	max-width: 100vw;
+	overflow-x: hidden;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 body {
 	color: var(--foreground);
 	background: var(--background);
+	font-size: 20px;
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
 }
 
-@layer utilities {
-	.text-balance {
-		text-wrap: balance;
+body > div {
+	display: flex;
+	justify-content: space-between;
+	height: 100%;
+}
+
+body > div > div.chat {
+	border: 1px solid blue;
+	width: 25%;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+@media (prefers-color-scheme: dark) {
+	html {
+		color-scheme: dark;
 	}
 }
