--- a/next/src/ui/Navbar/Navbar.module.scss
+++ b/next/src/ui/Navbar/Navbar.module.scss
@@ -2,19 +2,28 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	width: 100%;
+	width: 70%;
 	height: 60px;
-	background: #222225;
-	padding: 0 150px;
+	background: #222222;
+	margin: auto;
+	margin-top: 10px;
+	border-radius: 10px;
+	border: 2px solid rgba(255, 255, 255, 0.2);
 
 	a {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		border-radius: 10px;
 
 		img {
 			height: 80%;
 			width: auto;
+		}
+
+		&:hover {
+			background: #f87d0950;
+			text-decoration: underline;
 		}
 	}
 
@@ -27,9 +36,10 @@
 			color: #dbdbe7;
 			padding: 0 10px;
 			height: 100%;
+			border-radius: 10px;
 
 			&:hover {
-				color: rgba(255, 255, 255, 0.60);
+				background: #f87d0950;
 				text-decoration: underline;
 			}
 		}
