--- a/next/src/ui/globals.scss
+++ b/next/src/ui/globals.scss
@@ -62,6 +62,21 @@ body {
 		> .signin {
 			margin: auto;
 		}
+
+		.betMaker {
+			border: 2px solid #f87d09;
+			border-radius: 10px;
+			background: #00000050;
+			margin: 5px auto;
+			padding: 5px;
+			text-align: center;
+			width: 400px;
+			height: 120px;
+
+			button {
+				width: 20%;
+			}
+		}
 	}
 }
 
