--- a/next/src/ui/globals.scss
+++ b/next/src/ui/globals.scss
@@ -77,6 +77,18 @@ body {
 				width: 20%;
 			}
 		}
+
+		.card {
+			border: 3px #f87d09c2 solid;
+			border-radius: 10px;
+			color: #ffffff;
+			min-width: 120px;
+			min-height: 180px;
+			font-size: 40px;
+			text-align: center;
+			margin-left: -15px;
+			margin-right: -15px;
+		}
 	}
 }
 
