--- a/src/ui/globals.scss
+++ b/src/ui/globals.scss
@@ -1,6 +1,10 @@
 :root {
 	--foreground: #1b1b1e;
 	--background: #dbdbe7;
+	--orange: #ff8c00;
+	--orangeHover: #ff8c0050;
+	--grey: #2d2d2d;
+	--greyBorder: #595959;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,62 +36,58 @@ body {
 	max-height: 100vh;
 	color: var(--foreground);
 	background: var(--background);
-	font-size: 20px;
+	font-size: 1.2rem;
 	display: flex;
 	flex-direction: column;
 
 	> div {
 		display: flex;
 		justify-content: space-between;
-		height: calc(100vh - 70px);
+		height: calc(100vh - 1rem);
+		margin: 1rem;
 	}
 
 	main {
 		display: flex;
 		overflow-y: scroll;
-		background: #333333;
+		background: var(--grey);
 		width: 100%;
-		margin: 10px;
-		padding: 10px;
-		border-radius: 10px;
-		border: 2px solid rgba(255, 255, 255, 0.2);
+		margin-left: 1rem;
+		padding: 1rem;
+		border-radius: 1rem;
+		border: 0.1rem solid var(--greyBorder);
 
 		> div {
 			width: 100%;
+			text-align: center;
+		}
+
+		> .game {
 			display: flex;
-			flex-direction: column;
-			align-items: center;
+			flex-direction: row;
+
+			> .main {
+				width: 70%;
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+			}
 		}
 
 		> .signin {
 			margin: auto;
 		}
 
-		.betMaker {
-			border: 2px solid #f87d09;
-			border-radius: 10px;
-			background: #00000050;
-			margin: 5px auto;
-			padding: 5px;
-			text-align: center;
-			width: 400px;
-			height: 120px;
-
-			button {
-				width: 20%;
-			}
-		}
-
 		.card {
-			border: 3px #f87d09c2 solid;
-			border-radius: 10px;
-			color: #ffffff;
-			min-width: 120px;
-			min-height: 180px;
-			font-size: 40px;
+			border: 0.2rem var(--orange) solid;
+			border-radius: 1rem;
+			min-width: 7rem;
+			min-height: 10rem;
+			font-size: 3rem;
 			text-align: center;
-			margin-left: -15px;
-			margin-right: -15px;
+			margin-left: -1rem;
+			margin-right: -1rem;
 		}
 	}
 }
@@ -95,14 +95,12 @@ body {
 .btn {
 	font-size: inherit;
 	font-family: inherit;
-	padding: 5px 10px;
-	border-radius: 10px;
+	padding: 0.3rem 0.5rem;
+	border-radius: 0.5rem;
 	cursor: pointer;
-	border: 2px solid #f87d09;
+	border: 0.1rem solid var(--orange);
 	background: transparent;
-	color: #f87d09;
-	width: fit-content;
-	margin: 5px;
+	color: var(--orange);
 
 	&:hover {
 		background: #f87d0950;
@@ -115,7 +113,7 @@ body {
 
 	&:disabled {
 		cursor: not-allowed;
-		border: 2px solid #f87d0987;
+		border: 0.1rem solid #f87d0987;
 		color: #f87d0987;
 	}
 }
