--- a/src/ui/globals.scss
+++ b/src/ui/globals.scss
@@ -82,12 +82,11 @@ body {
 		.card {
 			border: 0.2rem var(--orange) solid;
 			border-radius: 1rem;
-			min-width: 7rem;
-			min-height: 10rem;
+			width: 8rem;
+			height: 12rem;
 			font-size: 3rem;
 			text-align: center;
-			margin-left: -1rem;
-			margin-right: -1rem;
+			margin: 0.5rem -1rem;
 		}
 	}
 }
