--- a/src/app/game/hilo/Hilo.module.scss
+++ b/src/app/game/hilo/Hilo.module.scss
@@ -1,13 +1,4 @@
-.cardsField {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	width: 100%;
-	border: 0.1rem solid var(--orange);
-	border-radius: 1rem;
-
+.hiloField {
 	> div {
 		width: 90%;
 		display: flex;
