--- a/src/ui/globals.scss
+++ b/src/ui/globals.scss
@@ -43,7 +43,7 @@ body {
 	> div {
 		display: flex;
 		justify-content: space-between;
-		height: calc(100vh - 1rem);
+		height: calc(100vh - 7rem);
 		margin: 1rem;
 	}
 
@@ -62,16 +62,27 @@ body {
 			text-align: center;
 		}
 
-		> .game {
+		> .gamePage {
 			display: flex;
 			flex-direction: row;
 
-			> .main {
+			> .mainContainer {
 				width: 70%;
 				height: 100%;
 				display: flex;
 				flex-direction: column;
 				align-items: center;
+
+				.gameContainer {
+					height: 100%;
+					width: 100%;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					border: 0.1rem solid var(--orange);
+					border-radius: 1rem;
+				}
 			}
 		}
 
