--- a/src/app/game/miner/MinerGame.module.scss
+++ b/src/app/game/miner/MinerGame.module.scss
@@ -1,79 +1,66 @@
-.container {
-	display: flex;
-	flex-direction: column;
-	background: #222225;
-	border-radius: 10px;
-	margin: 20px;
-	padding: 20px;
-	align-items: center;
-}
+.minerField {
+	flex-direction: row;
 
-.field {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 60%;
-	height: 100%;
-}
+	> div {
+		margin: 0 1rem;
+	}
 
-.row {
-	display: flex;
-	height: 20%;
-}
+	> .bombsPicker {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 20%;
 
-.cell {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 80px;
-	height: 80px;
-	border: 3px solid #e8a566;
-	border-radius: 10px;
-	background: #f87d09;
-	cursor: pointer;
-	transition: 0.2s;
-	margin: 3px;
-}
+		> button {
+			width: 100%;
+		}
+	}
 
-.cell:disabled {
-	cursor: not-allowed;
-}
+	> .gameField {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 80%;
+		height: 100%;
 
-.picked {
-	background-size: cover;
-	background-image: url(../../../assets/miner/money.jpg);
-}
+		> .row {
+			display: flex;
+			height: 20%;
+			width: 100%;
 
-.bomb {
-	background: #ffffff;
-	background-size: cover;
-	background-image: url(../../../assets/miner/bomb.png);
-}
+			> .cell {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 20%;
+				border-radius: 0.5rem;
+				border: 0.2rem solid var(--orangeDark);
+				background-color: var(--orange);
+				margin: 0.1rem;
+				transition: 0.2s;
+				cursor: pointer;
+				background-size: 40%;
+				background-position: center;
+				background-repeat: no-repeat;
 
-.was_picked {
-	background-size: cover;
-	background-image: url(../../../assets/miner/money.jpg);
-	opacity: 0.3;
-}
+				&:disabled {
+					cursor: not-allowed;
+				}
+			}
 
-.bombsPicker {
-	display: flex;
-}
+			> .picked {
+				background-image: url(../../../assets/miner/diamond.svg);
+				opacity: 0.6;
+			}
 
-.bombsPicker > div {
-	margin: 0 10px;
-	width: 200px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 25px;
-}
+			> .bomb {
+				background-image: url(../../../assets/miner/bomb.svg);
+				opacity: 0.6;
+			}
 
-.inp {
-	background: transparent;
-	color: #ffffff;
-	font-size: 20px;
-	border: 0px;
-	width: 40px;
-	cursor: pointer;
+			> .wasPicked {
+				opacity: 0.2;
+			}
+		}
+	}
 }
