add cards animations

--- a/src/app/game/poker/PokerGame.module.scss
+++ b/src/app/game/poker/PokerGame.module.scss
@@ -3,10 +3,11 @@
 
 	> .playerHand {
 		display: flex;
-
+		
 		> div {
 			cursor: pointer;
-
+			transition-duration: 0.3s;
+			
 			&:hover {
 				margin-top: -0.5rem;
 			}
