--- a/src/app/game/hilo/Hilo.module.scss
+++ b/src/app/game/hilo/Hilo.module.scss
@@ -5,7 +5,8 @@
 		width: 90%;
 		display: flex;
 		flex-direction: row;
-		justify-content: center;
+		justify-content: safe center;
+		overflow-x: scroll;
 	}
 
 	> .activeCard > div {
