--- a/src/app/game/miner/MinerGame.module.scss
+++ b/src/app/game/miner/MinerGame.module.scss
@@ -37,30 +37,54 @@
 				border: 0.2rem solid var(--orangeDark);
 				background-color: var(--orange);
 				margin: 0.1rem;
-				transition: 0.2s;
 				cursor: pointer;
 				background-size: 40%;
 				background-position: center;
 				background-repeat: no-repeat;
+				transition: 0.2s;
 
 				&:disabled {
 					cursor: not-allowed;
+				}
+
+				&:hover {
+					transform: scale(1.1);
 				}
 			}
 
 			> .picked {
 				background-image: url(../../../assets/miner/diamond.svg);
 				opacity: 0.6;
+				animation: flip 0.5s;
 			}
 
 			> .bomb {
 				background-image: url(../../../assets/miner/bomb.svg);
 				opacity: 0.6;
+				animation: flip 0.5s;
 			}
 
 			> .wasPicked {
 				opacity: 0.2;
 			}
+
+			.picked:hover,
+			.bomb:hover,
+			.wasPicked:hover {
+				transform: none;
+			}
 		}
+	}
+}
+
+@keyframes flip {
+	0% {
+		transform: rotateY(180deg);
+	}
+	50% {
+		scale: 0.8;
+	}
+	100% {
+		transform: rotateY(0);
 	}
 }
