--- a/src/ui/globals.scss
+++ b/src/ui/globals.scss
@@ -108,21 +108,21 @@ body {
 			text-align: center;
 			margin: 0.5rem 0.1rem;
 			transform-style: preserve-3d;
-			animation: rollout 0.5s;
+			animation: flip 0.5s;
 
 			> div {
 				backface-visibility: hidden;
 			}
-
-			@keyframes rollout {
-				0% {
-					transform: rotateY(180deg);
-				}
-				100% {
-					transform: rotateY(0);
-				}
-			}
 		}
+	}
+}
+
+@keyframes flip {
+	0% {
+		transform: rotateY(180deg);
+	}
+	100% {
+		transform: rotateY(0);
 	}
 }
 
