--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,11 +1,11 @@
 .card {
 	border: 0.2rem var(--orange) solid;
 	border-radius: 1rem;
-	min-width: 8rem;
-	height: 12rem;
-	font-size: 3rem;
+	min-width: 7rem;
+	height: 11rem;
+	font-size: 2.5rem;
 	text-align: center;
-	margin: 0.5rem 0.1rem;
+	margin: 0.2rem;
 	transform-style: preserve-3d;
 	animation: flip 0.5s;
 
