--- a/src/app/game/poker/poker.module.scss
+++ b/src/app/game/poker/poker.module.scss
@@ -1,43 +1,41 @@
-.pokerField {
-	flex-direction: column;
+.playerHand {
+	display: flex;
+	justify-content: safe center;
 
-	> .playerHand {
-		display: flex;
-		
-		> div {
-			cursor: pointer;
-			transition-duration: 0.3s;
-			
-			&:hover {
-				margin-top: -0.5rem;
-			}
-		}
+	> div {
+		cursor: pointer;
+		transition-duration: 0.3s;
 
-		> .hold {
-			border: 0.4rem solid green;
+		&:hover {
+			margin-top: -0.5rem;
 		}
 	}
 
-	> table {
-		background: var(--orangeHover);
-		border: 0.1rem solid var(--orange);
-		min-width: 60%;
-		border-radius: 1rem;
-		padding: 0 3rem;
+	> .hold {
+		border: 0.2rem solid green;
+	}
+}
 
-		> tbody > tr {
-			&.active {
-				color: var(--orange);
-			}
+.combinationTable {
+	background: var(--orangeHover);
+	border: 0.1rem solid var(--orange);
+	min-width: 60%;
+	border-radius: 1rem;
+	padding: 0 3rem;
+	margin: auto;
 
-			> td:first-child {
-				text-align: start;
-			}
+	> tbody > tr {
+		&.active {
+			color: var(--orange);
+		}
 
-			> td:last-child {
-				width: 30%;
-				text-align: end;
-			}
+		> td:first-child {
+			text-align: start;
+		}
+
+		> td:last-child {
+			width: 30%;
+			text-align: end;
 		}
 	}
 }
