--- a/src/components/BetMaker/BetMaker.module.scss
+++ b/src/components/BetMaker/BetMaker.module.scss
@@ -1,25 +1,19 @@
 .container {
-	width: 30%;
 	background: var(--grey);
 	border: 0.1rem solid var(--orange);
 	border-radius: 1rem;
-	margin-left: 1rem;
 	padding: 1rem;
 	text-align: center;
-	overflow-x: scroll;
 
 	> .bet {
 		display: flex;
 		align-items: center;
 		justify-content: space-evenly;
-		
-		button {
-			width: 10%;
-		}
 	}
 
 	> .betOptions {
-		margin: 0.3rem 0;
+		font-size: 0.8rem;
+
 		button {
 			width: 20%;
 			margin: 0.3rem 0.2rem;
