--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,19 +1,15 @@
 .sidebar {
-	margin: auto;
 	display: flex;
 	flex-direction: column;
-	background: var(--grey);
 	justify-content: center;
-	border-radius: 1rem;
-	border: 0.1rem solid var(--greyBorder);
 
 	a {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		height: 5rem;
-		width: 5rem;
 		border-radius: 1rem;
+		width: 100%;
+		height: 4rem;
 
 		img {
 			width: 60%;
@@ -30,4 +26,3 @@
 		}
 	}
 }
-
