--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -35,6 +35,28 @@ html {
 	font-size: 20px;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+footer {
+	text-align: center;
+
+	> nav {
+		margin-top: 0.5rem;
+
+		> a {
+			margin: 0 0.5rem;
+
+			> img {
+				max-width: 2rem;
+				height: auto;
+			}
+		}
+	}
+}
+
 body {
 	width: 100vw;
 	height: 100vh;
@@ -112,11 +134,6 @@ body {
 	align-items: center;
 	width: 100%;
 	min-height: 100%;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
 }
 
 @media (prefers-color-scheme: dark) {
