--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -40,6 +40,17 @@ a {
 	text-decoration: none;
 }
 
+a.linkBtn {
+	display: inline-block;
+	border: 0.1rem solid var(--orange);
+	border-radius: 0.5rem;
+	padding: 0.5rem;
+
+	&:hover {
+		background: #f87d0950;
+	}
+}
+
 footer {
 	text-align: center;
 
