--- a/src/components/Blocks/Block.module.scss
+++ b/src/components/Blocks/Block.module.scss
@@ -6,7 +6,7 @@
 	width: calc(100% - 1rem);
 
 	display: flex;
-	align-items: start;
+	align-items: flex-start;
 	flex-direction: column;
 	justify-content: center;
 	flex: content;
