add roulette game component

--- a/src/components/Roulette/Roulette.module.scss
+++ b/src/components/Roulette/Roulette.module.scss
@@ -8,8 +8,8 @@
 
 	> .selector {
 		position: absolute;
-		width: 0.1rem;
-		background: grey;
+		width: 0.2rem;
+		background: white;
 		left: 50%;
 		height: 100%;
 		transform: translate(-50%, 0%);
