add last spins displaying

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -6,6 +6,10 @@
 	--orangeHover: #ff8c0050;
 	--grey: #2d2d2d;
 	--greyBorder: #595959;
+
+	--rouletteGreen: #00c74d;
+	--rouletteRed: #f95146;
+	--rouletteBlack: #2d3035;
 }
 
 @media (prefers-color-scheme: dark) {
