--- a/src/app/game/roulette/roulette.module.scss
+++ b/src/app/game/roulette/roulette.module.scss
@@ -7,7 +7,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		margin: 0.5rem;
+		margin: 0.5rem 0.2rem;
 		border: 0.1rem solid var(--greyBorder);
 		border-radius: 50%;
 		width: 3rem;
