--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -39,6 +39,11 @@ html {
 	font-size: 20px;
 }
 
+hr {
+	border: none;
+	border-top: 0.1rem solid var(--orange);
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
