update roulette component

--- a/src/components/Roulette/Roulette.module.scss
+++ b/src/components/Roulette/Roulette.module.scss
@@ -2,9 +2,10 @@
 	position: relative;
 	display: flex;
 	justify-content: center;
-	width: 100%;
 	margin: 0 auto;
 	overflow: hidden;
+	border-radius: 1rem;
+	width: 100%;
 
 	> .selector {
 		position: absolute;
