--- a/src/app/game/roulette/roulette.module.scss
+++ b/src/app/game/roulette/roulette.module.scss
@@ -1,7 +1,65 @@
+.container {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	min-height: 100%;
+	overflow: hidden;
+
+	.betMaker {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+		width: 100%;
+
+		> div {
+			width: 33%;
+			margin: 0.5rem 0;
+
+			> ul {
+				border-radius: 0.5rem;
+				margin-top: 0.3rem;
+				padding: 0.5rem;
+				text-align: start;
+				list-style-type: none;
+				border: 0.1rem solid var(--orange);
+
+				> * {
+					padding: 0.1rem 1rem;
+					display: flex;
+					justify-content: space-between;
+
+					> span {
+						display: flex;
+
+						> button {
+							padding: 0 0.2rem;
+							margin-left: 0.2rem;
+							cursor: pointer;
+						}
+					}
+				}
+			}
+		}
+	}
+}
+
+.block {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 100%;
+	border: 0.1rem solid var(--orange);
+	border-radius: 1rem;
+}
+
 .lastSpins {
 	display: flex;
 	flex-direction: row-reverse;
-	justify-content: center;
+	justify-content: flex-end;
+	overflow: hidden;
+	max-width: 50%;
 
 	> div {
 		display: flex;
@@ -10,19 +68,47 @@
 		margin: 0.5rem 0.2rem;
 		border: 0.1rem solid var(--greyBorder);
 		border-radius: 50%;
-		width: 3rem;
-		height: 3rem;
+		min-width: 2.5rem;
+		min-height: 2.5rem;
+		font-size: 0.8rem;
 	}
+}
 
-	> .red {
-		background-color: var(--rouletteRed);
-	}
+.red {
+	background-color: var(--rouletteRed);
+}
 
-	> .black {
-		background-color: var(--rouletteBlack);
-	}
+.black {
+	background-color: var(--rouletteBlack);
+}
 
-	> .green {
-		background-color: var(--rouletteGreen);
+.green {
+	background-color: var(--rouletteGreen);
+}
+
+.currentPlayerBet {
+	color: var(--orange);
+}
+
+.losingBet {
+	color: #ffffff60;
+}
+
+.connectionType {
+	border-radius: 1rem;
+	padding: 0.1rem 1rem;
+	margin: 0.2rem;
+	width: fit-content;
+	border: 0.1rem solid rgb(255, 44, 44);
+	background-color: rgb(131, 55, 55);
+
+	&.success {
+		border: 0.1rem solid rgb(55, 233, 55);
+		background-color: rgb(14, 115, 14);
 	}
+}
+
+// ============================
+
+.progressContainer {
 }
