--- a/src/app/game/roulette/roulette.module.scss
+++ b/src/app/game/roulette/roulette.module.scss
@@ -56,8 +56,8 @@
 
 .lastSpins {
 	display: flex;
-	flex-direction: row-reverse;
-	justify-content: flex-end;
+	flex-direction: row;
+	justify-content: safe center;
 	overflow: hidden;
 	max-width: 50%;
 
