--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -8,6 +8,7 @@
 	margin: 0.2rem;
 	transform-style: preserve-3d;
 	animation: flip 0.5s;
+	color: white;
 
 	> div {
 		backface-visibility: hidden;
