--- a/src/components/Blocks/Block.module.scss
+++ b/src/components/Blocks/Block.module.scss
@@ -1,9 +1,10 @@
 .block {
-	border: 0.1rem solid var(--orange);
+	border: 0.1rem solid var(--content-block-bg);
 	border-radius: 1rem;
 	padding: 0.5rem;
 	margin: 0.5rem;
 	width: calc(100% - 1rem);
+	background-color: var(--content-block-bg);
 
 	display: flex;
 	align-items: flex-start;
