--- a/src/components/NewBetMaker/NewBetMaker.module.scss
+++ b/src/components/NewBetMaker/NewBetMaker.module.scss
@@ -1,5 +1,5 @@
 .container {
-	background: var(--grey);
+	background: var(--primary-bg);
 	border: 0.1rem solid var(--orange);
 	border-radius: 1rem;
 	padding: 1rem;
