add locale switching feature

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -87,7 +87,12 @@
 	}
 }
 
-.themeSwitcher {
+.themeSwitcher,
+.localeSwitcher {
+	font-size: inherit;
+	font-family: inherit;
 	border: none;
 	background-color: transparent;
+	appearance: none;
+	outline: none;
 }
