--- a/src/app/game/hilo/hilo.module.scss
+++ b/src/app/game/hilo/hilo.module.scss
@@ -1,4 +1,8 @@
 .cardsContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	> div {
 		display: flex;
 		flex-direction: row;
