--- a/src/app/game/miner/miner.module.scss
+++ b/src/app/game/miner/miner.module.scss
@@ -13,9 +13,11 @@
 		flex-direction: column;
 		align-items: center;
 		width: 20%;
+		white-space: nowrap;
 
 		> button {
 			width: 100%;
+			margin: 0.5rem;
 		}
 	}
 
@@ -28,6 +30,7 @@
 
 		> .row {
 			display: flex;
+			justify-content: center;
 			height: 5rem;
 			width: 100%;
 
@@ -89,5 +92,16 @@
 	}
 	100% {
 		transform: rotateY(0);
+	}
+}
+
+@media (max-width: 1200px) {
+	.minerField {
+		flex-direction: column;
+
+		> .bombsPicker {
+			flex-direction: row;
+			width: auto;
+		}
 	}
 }
