--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -2,6 +2,7 @@
 	border: 0.2rem var(--orange) solid;
 	border-radius: 1rem;
 	min-width: 7rem;
+	max-width: 7rem;
 	height: 11rem;
 	font-size: 2.5rem;
 	text-align: center;
