--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,8 +10,9 @@
 		border-radius: 1rem;
 
 		> img {
-			height: 80%;
+			height: 100%;
 			width: auto;
+			max-width: 100%;
 		}
 
 		&:hover {
@@ -95,4 +96,16 @@
 	background-color: transparent;
 	appearance: none;
 	outline: none;
+}
+
+@media (max-width: 768px) {
+	.header > .links > * {
+		padding: 0 0.3rem;
+	}
+}
+
+@media (max-width: 480px) {
+	.profile {
+		right: 0;
+	}
 }
